--- a/index.html
+++ b/index.html
@@ -13,14 +13,40 @@
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
 
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="https://resources/demos/style.css">
+
     <link rel="stylesheet" href="css/style.css">
 
 
 
 </head>
 
-
 <body>
+
+<div id="dialog" title="Forgot your password">
+   <form class ="dialog-form" action=" " method="post">
+       <div class="email-text">
+           <p >enter your <br>email
+           </p>
+           <input name="email" type="email" class="email-form">
+       </div>
+       <div class="f-mw">
+       <button type="submit" class="btn1-f">
+          Reset password
+       </button>
+
+       <p class="p-form">OR</p>
+
+       <button type="submit" class="btn2-f">
+           Log In Using Facebook
+       </button>
+       </div>
+
+
+   </form>
+</div>
+
 
 <header>
     <div class="container">
@@ -48,7 +74,8 @@
                     <a href="#">testimonials</a>
                 </li>
                 <li>
-                    <a href="#">contact</a>
+                    <a href="#">   contact us
+                        </a>
                 </li>
             </ul>
         </nav>
@@ -68,9 +95,10 @@
                 about designing websites and mobile apps.
             </p>
             <div>
-                <a href="#" class="contact-us">
+                <a href="#" class="contact-us" id="opener">
                     contact us
                 </a>
+                                 
             </div>
         </div>
     </div>
@@ -92,11 +120,9 @@
            </div>
         </section>
 
- <!-- 3 progress bars -->
-<section class="prog-bar-bg">
-
-    <div class="prog-bar-mv">
-        <div class="prog-bar-left">
+<section class="prog-section">
+    <div class="prog-bar-bg-left">
+        <div class="prog-mv">
             <h2 class="pr-skills">
                 Professional Skills
             </h2>
@@ -118,8 +144,13 @@
         </div>
     </div>
 
+
+    <div class="prog-bar-bg-right"> </div>
+
 </section>
+
  <!-- aqua section with 4 icons -->
+
 <section class="aqua">
     <div class="aqua-mw">
         <ul class="icons">
@@ -183,7 +214,9 @@
 
 <section class="gallery-1">
     <div class="sq1">
+        <a href="#">
         <img src="images/eye.png" alt="eye">
+        </a>
     </div>
     <div class="sq2">
         <img src="images/eye.png" alt="eye">
@@ -247,19 +280,19 @@
 
 <section class="services">
     <div class="services-mw">
-       <ul class="serv-list-1">
-           <li>
-               <div>
+       <div class="serv-list-1">
+                <div class="ser1">
                <img src="images/ser1.png" alt="ser1">
-               </div>
+
                <p>
                    ui / ux design
                </p>
                <span>
                 Be set fourth land god darkness <br> make it wherein own
                </span>
-           </li>
-           <li>
+                </div>
+
+           <div class="ser2">
                <img src="images/ser2.png" alt="ser2">
                <p>
                    web development
@@ -267,8 +300,8 @@
                <span>
                       A she'd them bring void moving<br>third she'd kind fill
                </span>
-           </li>
-           <li>
+           </div>
+           <div class="ser3">
                <img src="images/ser3.png" alt="ser3">
                <p>
                    app / mobile
@@ -276,8 +309,8 @@
                <span>
                     Dominion man second spirit he,<br>earth they're creeping
                </span>
-           </li>
-           <li>
+           </div>
+           <div class="ser4">
                <img src="images/ser4.png" alt="ser4">
                <p>
                    game design
@@ -285,10 +318,10 @@
                <span>
                       Morning his saying moveth it<br>multiply appear life be
                </span>
-           </li>
-       </ul>
-        <ul class="serv-list-2">
-            <li>
+               </div>
+       </div>
+        <div class="serv-list-2">
+            <div>
                 <img src="images/ser5.png" alt="ser1">
                 <p>
                     SEO / marketing
@@ -296,8 +329,8 @@
                 <span>
                 Give won't after land fill creeping<br>meat you, may
                </span>
-            </li>
-            <li>
+            </div>
+            <div>
                 <img src="images/ser6.png" alt="ser2">
                 <p>
                     photography
@@ -305,8 +338,8 @@
                 <span>
                       Creepeth one seas cattle grass<br>give moving saw give
                </span>
-            </li>
-            <li>
+            </div>
+            <div>
                 <img src="images/ser7.png" alt="ser3">
                 <p>
                     graphic design
@@ -314,8 +347,8 @@
                 <span>
                     Open, great whales air rule for,<br>fourth life whales
                </span>
-            </li>
-            <li>
+            </div>
+            <div>
                 <img src="images/ser8.png" alt="ser4">
                 <p>
                     illustrations
@@ -323,8 +356,8 @@
                 <span>
                       Whales likeness hath, man kind<br>for them air two won't
                </span>
-            </li>
-        </ul>
+            </div>
+        </div>
 
     </div>
 
@@ -542,6 +575,12 @@
         src="https://code.jquery.com/jquery-2.2.4.min.js"
         integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
         crossorigin="anonymous"></script>
+
+
+
+
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
 <script src="js/owl.carousel.min.js"></script>
 <script src="js/scripts.js"></script>
